py-target/SimpleParser.py
# Generated from Simple.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleParser ( Parser ):

    grammarFileName = "Simple.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "','", "'.'", "':'", "'rounds do'", 
                     "'>='", "'<='", "'patch'", "'include'", "'block'", 
                     "'subblock'", "'::'", "<INVALID>", "'if'", "'elif'", 
                     "'else'", "'for'", "'thisround'", "'break'", "'continue'", 
                     "'pass'", "'end'", "'recall'", "'to'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'<'", "'>'", "'=='", "'!='", 
                     "'+'", "'-'", "'**'", "'*'", "'/'", "'%'", "'||'", 
                     "'&&'", "'-~'", "'+~'", "'/~'", "'*~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PATCH", "INCLUDE", "BLOCK", "SUBBLOCK", 
                      "CONNECT", "DISCONNECT", "IF", "ELIF", "ELSE", "FOR", 
                      "THISROUND", "BREAK", "CONTINUE", "PASS", "END", "RECALL", 
                      "TO", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", 
                      "L_BRACKET", "R_BRACKET", "L_ANGLE", "R_ANGLE", "EQ", 
                      "NOT_EQ", "PLUS", "MINUS", "POW", "STAR", "DIV", "MOD", 
                      "OR", "AND", "SIGMINUS", "SIGPLUS", "SIGDIV", "SIGSTAR", 
                      "NODETYPE", "INOUTID", "ID", "SYMBOL", "NUMBER", "INTEGER", 
                      "FLOAT", "NL", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_blockstmt = 1
    RULE_subblockstmt = 2
    RULE_stmt = 3
    RULE_declarationstmt = 4
    RULE_parameters = 5
    RULE_typedargslist = 6
    RULE_arg = 7
    RULE_operation = 8
    RULE_ioletdeclstmt = 9
    RULE_connectionstmt = 10
    RULE_recallstmt = 11
    RULE_ifstmt = 12
    RULE_forstmt = 13
    RULE_suite = 14
    RULE_expr = 15

    ruleNames =  [ "prog", "blockstmt", "subblockstmt", "stmt", "declarationstmt", 
                   "parameters", "typedargslist", "arg", "operation", "ioletdeclstmt", 
                   "connectionstmt", "recallstmt", "ifstmt", "forstmt", 
                   "suite", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    PATCH=9
    INCLUDE=10
    BLOCK=11
    SUBBLOCK=12
    CONNECT=13
    DISCONNECT=14
    IF=15
    ELIF=16
    ELSE=17
    FOR=18
    THISROUND=19
    BREAK=20
    CONTINUE=21
    PASS=22
    END=23
    RECALL=24
    TO=25
    L_PAREN=26
    R_PAREN=27
    L_CURLY=28
    R_CURLY=29
    L_BRACKET=30
    R_BRACKET=31
    L_ANGLE=32
    R_ANGLE=33
    EQ=34
    NOT_EQ=35
    PLUS=36
    MINUS=37
    POW=38
    STAR=39
    DIV=40
    MOD=41
    OR=42
    AND=43
    SIGMINUS=44
    SIGPLUS=45
    SIGDIV=46
    SIGSTAR=47
    NODETYPE=48
    INOUTID=49
    ID=50
    SYMBOL=51
    NUMBER=52
    INTEGER=53
    FLOAT=54
    NL=55
    WS=56
    COMMENT=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATCH(self):
            return self.getToken(SimpleParser.PATCH, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.ID)
            else:
                return self.getToken(SimpleParser.ID, i)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.NL)
            else:
                return self.getToken(SimpleParser.NL, i)

        def INCLUDE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.INCLUDE)
            else:
                return self.getToken(SimpleParser.INCLUDE, i)

        def blockstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.BlockstmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.BlockstmtContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SimpleParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 32
                self.match(SimpleParser.INCLUDE)
                self.state = 33
                self.match(SimpleParser.ID)
                self.state = 34
                self.match(SimpleParser.NL)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(SimpleParser.PATCH)
            self.state = 41
            self.match(SimpleParser.ID)
            self.state = 42
            self.match(SimpleParser.NL)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 45
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [11]:
                    self.state = 43
                    self.blockstmt()
                    pass
                elif token in [15, 18, 20, 21, 22, 24, 32, 48, 50, 55]:
                    self.state = 44
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 37436176221898752) != 0):
                    break

            self.state = 49
            self.match(SimpleParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK(self):
            return self.getToken(SimpleParser.BLOCK, 0)

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def L_CURLY(self):
            return self.getToken(SimpleParser.L_CURLY, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.NL)
            else:
                return self.getToken(SimpleParser.NL, i)

        def R_CURLY(self):
            return self.getToken(SimpleParser.R_CURLY, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def subblockstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.SubblockstmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.SubblockstmtContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_blockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockstmt" ):
                listener.enterBlockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockstmt" ):
                listener.exitBlockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)




    def blockstmt(self):

        localctx = SimpleParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(SimpleParser.BLOCK)
            self.state = 52
            self.match(SimpleParser.ID)
            self.state = 53
            self.match(SimpleParser.L_CURLY)
            self.state = 54
            self.match(SimpleParser.NL)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 37436176221900800) != 0:
                self.state = 57
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [15, 18, 20, 21, 22, 24, 32, 48, 50, 55]:
                    self.state = 55
                    self.stmt()
                    pass
                elif token in [12]:
                    self.state = 56
                    self.subblockstmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(SimpleParser.R_CURLY)
            self.state = 63
            self.match(SimpleParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubblockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBBLOCK(self):
            return self.getToken(SimpleParser.SUBBLOCK, 0)

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def L_CURLY(self):
            return self.getToken(SimpleParser.L_CURLY, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.NL)
            else:
                return self.getToken(SimpleParser.NL, i)

        def R_CURLY(self):
            return self.getToken(SimpleParser.R_CURLY, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_subblockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubblockstmt" ):
                listener.enterSubblockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubblockstmt" ):
                listener.exitSubblockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubblockstmt" ):
                return visitor.visitSubblockstmt(self)
            else:
                return visitor.visitChildren(self)




    def subblockstmt(self):

        localctx = SimpleParser.SubblockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_subblockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SimpleParser.SUBBLOCK)
            self.state = 66
            self.match(SimpleParser.ID)
            self.state = 67
            self.match(SimpleParser.L_CURLY)
            self.state = 68
            self.match(SimpleParser.NL)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 37436176221896704) != 0:
                self.state = 69
                self.stmt()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(SimpleParser.R_CURLY)
            self.state = 76
            self.match(SimpleParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationstmt(self):
            return self.getTypedRuleContext(SimpleParser.DeclarationstmtContext,0)


        def NL(self):
            return self.getToken(SimpleParser.NL, 0)

        def ioletdeclstmt(self):
            return self.getTypedRuleContext(SimpleParser.IoletdeclstmtContext,0)


        def connectionstmt(self):
            return self.getTypedRuleContext(SimpleParser.ConnectionstmtContext,0)


        def recallstmt(self):
            return self.getTypedRuleContext(SimpleParser.RecallstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(SimpleParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(SimpleParser.ForstmtContext,0)


        def BREAK(self):
            return self.getToken(SimpleParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(SimpleParser.CONTINUE, 0)

        def PASS(self):
            return self.getToken(SimpleParser.PASS, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = SimpleParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.declarationstmt()
                self.state = 79
                self.match(SimpleParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.ioletdeclstmt()
                self.state = 82
                self.match(SimpleParser.NL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.connectionstmt()
                self.state = 85
                self.match(SimpleParser.NL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.recallstmt()
                self.state = 88
                self.match(SimpleParser.NL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.ifstmt()
                self.state = 91
                self.match(SimpleParser.NL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.forstmt()
                self.state = 94
                self.match(SimpleParser.NL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.match(SimpleParser.BREAK)
                self.state = 97
                self.match(SimpleParser.NL)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 98
                self.match(SimpleParser.CONTINUE)
                self.state = 99
                self.match(SimpleParser.NL)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 100
                self.match(SimpleParser.PASS)
                self.state = 101
                self.match(SimpleParser.NL)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 102
                self.match(SimpleParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def NODETYPE(self):
            return self.getToken(SimpleParser.NODETYPE, 0)

        def parameters(self):
            return self.getTypedRuleContext(SimpleParser.ParametersContext,0)


        def operation(self):
            return self.getTypedRuleContext(SimpleParser.OperationContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_declarationstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationstmt" ):
                listener.enterDeclarationstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationstmt" ):
                listener.exitDeclarationstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationstmt" ):
                return visitor.visitDeclarationstmt(self)
            else:
                return visitor.visitChildren(self)




    def declarationstmt(self):

        localctx = SimpleParser.DeclarationstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarationstmt)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(SimpleParser.ID)
                self.state = 106
                self.match(SimpleParser.T__1)

                self.state = 107
                self.match(SimpleParser.NODETYPE)
                self.state = 108
                self.parameters()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(SimpleParser.NODETYPE)
                self.state = 110
                self.parameters()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.match(SimpleParser.ID)
                self.state = 112
                self.match(SimpleParser.T__1)
                self.state = 113
                self.operation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(SimpleParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(SimpleParser.R_PAREN, 0)

        def typedargslist(self):
            return self.getTypedRuleContext(SimpleParser.TypedargslistContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = SimpleParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SimpleParser.L_PAREN)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51 or _la==52:
                self.state = 117
                self.typedargslist()


            self.state = 120
            self.match(SimpleParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedargslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.ArgContext)
            else:
                return self.getTypedRuleContext(SimpleParser.ArgContext,i)


        def INOUTID(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.INOUTID)
            else:
                return self.getToken(SimpleParser.INOUTID, i)

        def NODETYPE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.NODETYPE)
            else:
                return self.getToken(SimpleParser.NODETYPE, i)

        def parameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.ParametersContext)
            else:
                return self.getTypedRuleContext(SimpleParser.ParametersContext,i)


        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.OperationContext)
            else:
                return self.getTypedRuleContext(SimpleParser.OperationContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_typedargslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedargslist" ):
                listener.enterTypedargslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedargslist" ):
                listener.exitTypedargslist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedargslist" ):
                return visitor.visitTypedargslist(self)
            else:
                return visitor.visitChildren(self)




    def typedargslist(self):

        localctx = SimpleParser.TypedargslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typedargslist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.arg()
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 123
                    self.match(SimpleParser.T__2)
                    self.state = 124
                    self.arg() 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 130
                self.match(SimpleParser.T__2)
                self.state = 131
                self.match(SimpleParser.INOUTID)
                self.state = 132
                self.match(SimpleParser.T__1)
                self.state = 136
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [48]:
                    self.state = 133
                    self.match(SimpleParser.NODETYPE)
                    self.state = 134
                    self.parameters()
                    pass
                elif token in [36, 37, 39, 40, 44, 45, 46, 47, 52]:
                    self.state = 135
                    self.operation()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SimpleParser.SYMBOL, 0)

        def NUMBER(self):
            return self.getToken(SimpleParser.NUMBER, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = SimpleParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not(_la==51 or _la==52):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def NUMBER(self):
            return self.getToken(SimpleParser.NUMBER, 0)

        def STAR(self):
            return self.getToken(SimpleParser.STAR, 0)

        def DIV(self):
            return self.getToken(SimpleParser.DIV, 0)

        def SIGSTAR(self):
            return self.getToken(SimpleParser.SIGSTAR, 0)

        def SIGDIV(self):
            return self.getToken(SimpleParser.SIGDIV, 0)

        def PLUS(self):
            return self.getToken(SimpleParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(SimpleParser.MINUS, 0)

        def SIGPLUS(self):
            return self.getToken(SimpleParser.SIGPLUS, 0)

        def SIGMINUS(self):
            return self.getToken(SimpleParser.SIGMINUS, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = SimpleParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(SimpleParser.NUMBER)
                pass
            elif token in [36, 37, 39, 40, 44, 45, 46, 47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 265738216538112) != 0):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==52:
                    self.state = 147
                    self.match(SimpleParser.NUMBER)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoletdeclstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def INOUTID(self):
            return self.getToken(SimpleParser.INOUTID, 0)

        def NODETYPE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.NODETYPE)
            else:
                return self.getToken(SimpleParser.NODETYPE, i)
